# optuna-distributed

./: LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: general-question.md
.github/workflows/: format.yaml  release.yaml  test.yaml
examples/: disable_logging.py  qadratic_simple.py  quadratic_simple.py  simple_pruning.py  simple_storages.py  visualization.py
optuna_distributed/: __init__.py  config.py  eventloop.py  study.py  terminal.py  trial.py
optuna_distributed/ipc/: __init__.py  base.py  pipe.py  queue.py
optuna_distributed/managers/: __init__.py  base.py  distributed.py  local.py
optuna_distributed/messages/: __init__.py  base.py  completed.py  failed.py  generic.py  heartbeat.py  property.py  pruned.py  repeated.py  report.py  response.py  setattr.py  shouldprune.py  suggest.py
tests/: conftest.py  test_eventloop.py  test_ipc.py  test_managers.py  test_messages.py  test_trial.py
